--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav>
             <ul>
                 <div class="logo">
-                    <img src="assets/DummyZon.png" alt="logo">
+                    <img src="DummyZon.png" alt="logo">
                     <li><a href="index.html">DummyZon</a></li>
                 </div>
 
@@ -36,7 +36,7 @@
 
                 <div class="user">
                     <li class="hide"><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
-                    <li class="hide"><img src="assets/user.jpeg" alt="user"></li>
+                    <li class="hide"><img src="user.jpeg" alt="user"></li>
                     <li onclick="showSidebar()" class="show"><i class="fa-solid fa-bars"></i></li>
                 </div>                
             </ul>
@@ -49,7 +49,7 @@
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
                 <div class="sidebar-user">
-                    <li><img src="assets/user.jpeg" alt="user"></li>
+                    <li><img src="user.jpeg" alt=""></li>
                     <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
                 </div>                
             </ul>
@@ -60,7 +60,7 @@
     <!--? product's page -->
     <section>
 
-        <img src="assets/gaming-pc.jpg" alt="product">
+        <img src="gaming-pc.jpg" alt="product">
         <p class="company">Asus Inc.</p>
         <h2>Asus 4K Gaming PC</h2>
         <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem laudantium voluptatem, reprehenderit quibusdam dolor consequuntur ex, similique expedita architecto sunt ipsam non atque modi. Ad pariatur quam corrupti nulla deleniti!</p>
